--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,11 +1,19 @@
 .img-card-product {
   width: 100%;
-  object-fit:cover;
+  object-fit: cover;
   overflow: hidden;
   p {
     float: right;
     font-size: 2rem;
     margin-right: 1rem;
     margin-top: 1rem;
-      }
+  }
+}
+.img-cart {
+  min-width: 50px;
+  min-height:50px;
+
+  max-width: 100%;
+  max-height: 100%;
+  object-fit:cover;
 }
